# learning_platform_api

./: .env.sample  README.md  pyproject.toml
config/: settings.py  urls.py
fixtures/: 01_auth.json  02_users.json  03_course.json  04_lessons.json  05_payments.json  06_subscriptions.json
materials/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py
users/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_subscription.py  0004_payments_payment_id_payments_payment_link_and_more.py  0005_alter_subscription_course_alter_subscription_user.py
